# rnpm

./: Cargo.toml  LICENCE.md  README.md
scripts/: install-linux.sh  install-standalone.ps1  install-standalone.sh  install.ps1  install.sh
src/: config.rs  downloader.rs  lockfile.rs  lockfile_import.rs  main.rs  registry.rs  resolver.rs
